--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         fetch-depth: 0
     - name: Install system dependencies
-      run: sudo apt-get -y install libxml2-utils
+      run: sudo apt-get update && sudo apt-get -y install libxml2-utils
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
