Update to setuptools 60+ to work around build failure
Seems to be related to https://github.com/pypa/setuptools/issues/2765

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
       with:
         python-version: 3.8
     - name: Install Python dependencies
-      run: pip install wheel
+      run: pip install wheel setuptools==60
     - name: Bootstrap
       run: ./bootstrap.sh
     - name: Build
