--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,13 +16,13 @@ jobs:
       # required to authenticate for the PyPi upload below
       id-token: write
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Install system dependencies
       run: sudo apt-get update && sudo apt-get -y install libxml2-utils
     - name: Set up Python 3.8
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5
       with:
-        python-version: 3.8
+        python-version: '3.8'
     - name: Install Python dependencies
       run: pip install wheel
     - name: Bootstrap
